# drainlib

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: demo.rs  persist.rs
src/: lib.rs
