[package]
name = "drainlib"
version = "0.2.0"
edition = "2024"
description = "A Rust implementation of the DRAIN log parsing algorithm"
license-file = "LICENSE"
repository = "https://github.com/vulogov/drainlib"
categories = ["data-structures"]
keywords = ["value", "data", "logs", "parsing", "regex"]

[dependencies]
regex = "1.12.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
